[package]
name = "verify-keplr-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
ecdsa = { version =  "0.14.8", features = ["der", "arithmetic", "digest"] }
hex = "0.4.3"
k256 = "0.11.6"
secp256k1 = "0.25.0"
serde = { version =  "1.0.152", features = ["derive", "serde_derive"]}
serde_json = "1.0.91"
tendermint = { version =  "0.28.0", features = ["secp256k1"] }
